added gpg signature

--- a/primeui-tester/pom.xml
+++ b/primeui-tester/pom.xml
@@ -99,6 +99,24 @@
 					</execution>
 				</executions>
 			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-gpg-plugin</artifactId>
+				<version>1.5</version>
+				<executions>
+					<execution>
+						<id>sign-artifacts</id>
+						<phase>verify</phase>
+						<goals>
+							<goal>sign</goal>
+						</goals>
+						<configuration>
+							<!-- The open source community of Axon.ivy -->
+							<keyname>23E36F7D</keyname>
+						</configuration>
+					</execution>
+				</executions>
+    		</plugin>
 		</plugins>
 	</build>
 </project>
