--- a/primeui-tester/pom.xml
+++ b/primeui-tester/pom.xml
@@ -38,19 +38,21 @@
 		<url>https://github.com/ivy-supplements</url>
 	</organization>
 
-	<distributionManagement>
-		<repository>
-			<id>zugpronexus.snapshots</id>
-			<name>Internal Build Integration Repository</name>
-			<url>http://zugpronexus:8081/nexus/content/repositories/build-snapshots/</url>
-		</repository>
-	</distributionManagement>
-
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 	</properties>
 
 	<profiles>
+		<profile>
+			<id>build</id>
+			<distributionManagement>
+				<repository>
+					<id>zugpronexus.snapshots</id>
+					<name>Internal Build Integration Repository</name>
+					<url>http://zugpronexus:8081/nexus/content/repositories/build-snapshots/</url>
+				</repository>
+			</distributionManagement>
+		</profile>
 		<profile>
 			<id>central</id>
 			<distributionManagement>
