--- a/primeui-tester/pom.xml
+++ b/primeui-tester/pom.xml
@@ -6,7 +6,7 @@
 	<artifactId>primeui-tester</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<packaging>jar</packaging>
-	
+
 	<name>primeui-tester</name>
 	<description>API that simplifies testing of JSF pages that contain Primefaces Widgets.</description>
 	<url>https://github.com/ivy-supplements/primeui-tester/</url>
@@ -69,7 +69,7 @@
 		<dependency>
 			<groupId>org.seleniumhq.selenium</groupId>
 			<artifactId>selenium-java</artifactId>
-			<version>2.48.1</version>
+			<version>2.53.0</version>
 			<scope>compile</scope>
 		</dependency>
 
@@ -85,7 +85,13 @@
 			<version>3.2.0</version>
 			<scope>test</scope>
 		</dependency>
+		<dependency>
+			<groupId>org.apache.commons</groupId>
+			<artifactId>commons-lang3</artifactId>
+			<version>3.4</version>
+		</dependency>
 	</dependencies>
+	
 	<build>
 		<plugins>
 			<plugin>
@@ -131,7 +137,7 @@
 						</configuration>
 					</execution>
 				</executions>
-    		</plugin>
+			</plugin>
 		</plugins>
 	</build>
 </project>
