--- a/primeui-tester/pom.xml
+++ b/primeui-tester/pom.xml
@@ -4,7 +4,7 @@
 
 	<groupId>com.axonivy.ivy.supplements</groupId>
 	<artifactId>primeui-tester</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
+	<version>0.0.2-SNAPSHOT</version>
 	<packaging>jar</packaging>
 
 	<name>primeui-tester</name>
@@ -71,6 +71,11 @@
 			<artifactId>selenium-java</artifactId>
 			<version>2.53.1</version>
 			<scope>compile</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.seleniumhq.selenium</groupId>
+			<artifactId>selenium-htmlunit-driver</artifactId>
+			<version>2.52.0</version>
 		</dependency>
 		<dependency>
 			<groupId>junit</groupId>
