--- a/primeui-tester/pom.xml
+++ b/primeui-tester/pom.xml
@@ -147,6 +147,10 @@
 						<configuration>
 							<!-- The open source community of Axon.ivy -->
 							<keyname>23E36F7D</keyname>
+							<gpgArguments>
+								<arg>--pinentry-mode</arg>
+								<arg>loopback</arg>
+							</gpgArguments>
 						</configuration>
 					</execution>
 				</executions>
