Update Company Name

--- a/primeui-tester/pom.xml
+++ b/primeui-tester/pom.xml
@@ -22,7 +22,7 @@
 		<developer>
 			<name>Denis Huelin</name>
 			<email>support@ivyteam.ch</email>
-			<organization>AXON IVY AG</organization>
+			<organization>AXON Ivy AG</organization>
 			<organizationUrl>http://www.axonivy.com</organizationUrl>
 		</developer>
 	</developers>
