--- a/primeui-tester/pom.xml
+++ b/primeui-tester/pom.xml
@@ -82,6 +82,11 @@
       <artifactId>junit-jupiter-engine</artifactId>
       <version>${junit.engine.version}</version>
     </dependency>
+    <dependency>
+      <groupId>org.junit.jupiter</groupId>
+      <artifactId>junit-jupiter-migrationsupport</artifactId>
+      <version>${junit.engine.version}</version>
+    </dependency>
 		<dependency>
 			<groupId>org.assertj</groupId>
 			<artifactId>assertj-core</artifactId>
@@ -122,6 +127,9 @@
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-javadoc-plugin</artifactId>
 				<version>3.1.1</version>
+				<configuration>
+		      <javadocExecutable>${java.home}/../bin/javadoc</javadocExecutable>
+		    </configuration>
 				<executions>
 					<execution>
 						<id>attach-javadocs</id>
