add surefire plugin to run junit 5 tests

--- a/primeui-tester/pom.xml
+++ b/primeui-tester/pom.xml
@@ -41,6 +41,7 @@
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <junit.engine.version>5.5.2</junit.engine.version>
+    <maven.surefire.version>3.0.0-M3</maven.surefire.version>
 	</properties>
 
 	<profiles>
@@ -82,11 +83,6 @@
       <artifactId>junit-jupiter-engine</artifactId>
       <version>${junit.engine.version}</version>
     </dependency>
-    <dependency>
-      <groupId>org.junit.jupiter</groupId>
-      <artifactId>junit-jupiter-migrationsupport</artifactId>
-      <version>${junit.engine.version}</version>
-    </dependency>
 		<dependency>
 			<groupId>org.assertj</groupId>
 			<artifactId>assertj-core</artifactId>
@@ -124,11 +120,51 @@
 				</executions>
 			</plugin>
 			<plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-surefire-plugin</artifactId>
+        <version>${maven.surefire.version}</version>
+        <configuration>
+          <testFailureIgnore>true</testFailureIgnore>
+        </configuration>
+        <dependencies>
+          <dependency>
+            <groupId>org.junit.platform</groupId>
+            <artifactId>junit-platform-surefire-provider</artifactId>
+            <version>1.2.0</version>
+          </dependency>
+          <dependency>
+            <groupId>org.junit.vintage</groupId>
+            <artifactId>junit-vintage-engine</artifactId>
+            <version>${junit.engine.version}</version>
+          </dependency>
+        </dependencies>
+        <executions>
+          <execution>
+            <id>default-test</id>
+            <configuration>
+              <skip>true</skip>
+            </configuration>
+          </execution>
+          <execution>
+            <id>selenium.web.test</id>
+            <phase>integration-test</phase>
+            <goals>
+              <goal>test</goal>
+            </goals>
+            <configuration>
+              <includes>
+                <include>**/TestPrimeUi.java</include>
+              </includes>
+            </configuration>
+          </execution>
+        </executions>
+      </plugin>
+			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-javadoc-plugin</artifactId>
 				<version>3.1.1</version>
 				<configuration>
-		      <javadocExecutable>${java.home}/../bin/javadoc</javadocExecutable>
+		      <javadocExecutable>${java.home}/bin/javadoc</javadocExecutable>
 		    </configuration>
 				<executions>
 					<execution>
