--- a/primeui-tester/pom.xml
+++ b/primeui-tester/pom.xml
@@ -138,7 +138,7 @@
 					</goals>
 					<configuration>
 						<includes>
-							<include>**/TestPrimeUi.java</include>
+							<include>**/Test*.java</include>
 						</includes>
 					</configuration>
 				</execution>
