--- a/maven-config/pom.xml
+++ b/maven-config/pom.xml
@@ -37,13 +37,45 @@
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
   </properties>
 
-  <distributionManagement>
-    <snapshotRepository>
-      <id>ossrh</id>
-      <name>Maven Central Snapshots Repo</name>
-      <url>https://oss.sonatype.org/content/repositories/snapshots</url>
-    </snapshotRepository>
-  </distributionManagement>
+  <profiles>
+    <profile>
+      <id>sonatype.snapshots</id>
+      <distributionManagement>
+        <snapshotRepository>
+          <id>sonatype.snapshots</id>
+          <name>Maven Central Snapshots Repo</name>
+          <url>https://oss.sonatype.org/content/repositories/snapshots</url>
+        </snapshotRepository>
+      </distributionManagement>
+    </profile>
+    <profile>
+      <id>maven.central.release</id>
+      <distributionManagement>
+        <repository>
+          <id>sonatype.releases</id>
+          <name>Sonatype Releases Repo</name>
+          <url>https://oss.sonatype.org/content/repositories/releases/</url>
+        </repository>
+      </distributionManagement>
+      <properties>
+        <run.public.download.test>true</run.public.download.test>
+      </properties>
+      <build>
+        <plugins>
+          <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-release-plugin</artifactId>
+            <version>2.5.3</version>
+            <configuration>
+              <tagNameFormat>v@{project.version}</tagNameFormat>
+              <releaseProfiles>release</releaseProfiles>
+              <goals>deploy site-deploy</goals>
+            </configuration>
+          </plugin>
+        </plugins>
+      </build>
+    </profile>
+  </profiles>
 
   <build>
     <plugins>
