--- a/maven-config/pom.xml
+++ b/maven-config/pom.xml
@@ -66,7 +66,8 @@
             <configuration>
               <tagNameFormat>v@{project.version}</tagNameFormat>
               <releaseProfiles>release</releaseProfiles>
-              <goals>deploy site-deploy</goals>
+              <goals>deploy</goals>
+              <arguments>-Dmaven.compiler.source=11 -Dmaven.compiler.target=11</arguments>
             </configuration>
           </plugin>
         </plugins>
