--- a/maven-config/pom.xml
+++ b/maven-config/pom.xml
@@ -151,17 +151,20 @@
             <id>flatten</id>
             <phase>process-resources</phase>
             <goals>
-            <goal>flatten</goal>
+              <goal>flatten</goal>
             </goals>
           </execution>
           <execution>
             <id>flatten.clean</id>
             <phase>clean</phase>
             <goals>
-            <goal>clean</goal>
+              <goal>clean</goal>
             </goals>
           </execution>
         </executions>
+        <configuration>
+          <flattenMode>oss</flattenMode>
+        </configuration>
       </plugin>
     </plugins>
     <pluginManagement>
