--- a/primeui-tester/pom.xml
+++ b/primeui-tester/pom.xml
@@ -10,7 +10,7 @@
 
   <groupId>com.axonivy.ivy.webtest</groupId>
   <artifactId>primeui-tester</artifactId>
-  <version>1.0.0-SNAPSHOT</version>
+  <version>1.0.${revision}</version>
   <packaging>jar</packaging>
   
   <name>primeui-tester</name>
