--- a/maven-config/pom.xml
+++ b/maven-config/pom.xml
@@ -24,6 +24,8 @@
 
   <scm>
     <connection>scm:git:git@github.com:ivy-supplements/web-tester.git</connection>
+    <developerConnection>scm:git:git@github.com:ivy-supplements/web-tester.git</developerConnection>
+    <url>git@github.com:ivy-supplements/web-tester.git</url>
     <tag>HEAD</tag>
   </scm>
 
