--- a/maven-config/pom.xml
+++ b/maven-config/pom.xml
@@ -68,7 +68,7 @@
             <configuration>
               <serverId>sonatype.releases</serverId>
               <nexusUrl>https://oss.sonatype.org/</nexusUrl>
-              <autoReleaseAfterClose>true</autoReleaseAfterClose>
+              <!--<autoReleaseAfterClose>true</autoReleaseAfterClose>-->
             </configuration>
           </plugin>
         </plugins>
