--- a/web-tester/pom.xml
+++ b/web-tester/pom.xml
@@ -11,7 +11,7 @@
 
   <groupId>com.axonivy.ivy.webtest</groupId>
   <artifactId>web-tester</artifactId>
-  <version>8.0.0-SNAPSHOT</version>
+  <version>8.0.${revision}</version>
   <packaging>jar</packaging>
   
   <name>web-tester</name>
@@ -22,7 +22,7 @@
     <dependency>
       <groupId>com.axonivy.ivy.webtest</groupId>
       <artifactId>primeui-tester</artifactId>
-      <version>7.0.0-SNAPSHOT</version>
+      <version>7.0.0</version>
     </dependency>
   </dependencies>
 </project>
