--- a/web-tester/pom.xml
+++ b/web-tester/pom.xml
@@ -22,7 +22,7 @@
     <dependency>
       <groupId>com.axonivy.ivy.webtest</groupId>
       <artifactId>primeui-tester</artifactId>
-      <version>7.0.1-SNAPSHOT</version>
+      <version>9.1.${revision}</version>
     </dependency>
   </dependencies>
 </project>
