--- a/pom.xml
+++ b/pom.xml
@@ -8,6 +8,7 @@
   <modules>
     <module>primeui-tester</module>
     <module>web-tester</module>
+    <module>unit-tester</module>
   </modules>
 
   <build>
