--- a/primeui-tester/pom.xml
+++ b/primeui-tester/pom.xml
@@ -10,7 +10,7 @@
 
   <groupId>com.axonivy.ivy.webtest</groupId>
   <artifactId>primeui-tester</artifactId>
-  <version>9.1.${revision}</version>
+  <version>9.2.${revision}</version>
   <packaging>jar</packaging>
   
   <name>primeui-tester</name>
@@ -29,14 +29,9 @@
       <version>3.141.59</version>
     </dependency>
     <dependency>
-      <groupId>org.junit.jupiter</groupId>
-      <artifactId>junit-jupiter-engine</artifactId>
-      <version>5.6.0</version>
-    </dependency>
-    <dependency>
-      <groupId>org.assertj</groupId>
-      <artifactId>assertj-core</artifactId>
-      <version>3.15.0</version>
+      <groupId>com.axonivy.ivy.test</groupId>
+      <artifactId>unit-tester</artifactId>
+      <version>${project.version}</version>
     </dependency>
     <dependency>
       <groupId>org.apache.commons</groupId>
