--- a/unit-tester/pom.xml
+++ b/unit-tester/pom.xml
@@ -15,7 +15,7 @@
   <packaging>jar</packaging>
   
   <name>unit-tester</name>
-  <description>Provides dependencies that simplifies unit and process testing with Axon.ivy projects.</description>
+  <description>Provides dependencies that simplifies unit and process testing with Axon Ivy projects.</description>
   <url>https://github.com/axonivy/web-tester</url>
 
   <dependencies>
