--- a/primeui-tester/pom.xml
+++ b/primeui-tester/pom.xml
@@ -24,6 +24,11 @@
       <version>6.7.1</version>
     </dependency>
     <dependency>
+      <groupId>org.seleniumhq.selenium</groupId>
+      <artifactId>selenium-java</artifactId>
+      <version>4.3.0</version>
+    </dependency>
+    <dependency>
       <groupId>com.axonivy.ivy.test</groupId>
       <artifactId>unit-tester</artifactId>
       <version>${project.version}</version>
