--- a/maven-config/pom.xml
+++ b/maven-config/pom.xml
@@ -3,7 +3,7 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>com.axonivy.ivy.webtest</groupId>
   <artifactId>web-config</artifactId>
-  <version>1.0.0-SNAPSHOT</version>
+  <version>9.4.2-SNAPSHOT</version>
   <packaging>pom</packaging>
 
   <licenses>
@@ -23,9 +23,7 @@
   </developers>
 
   <scm>
-    <connection>scm:git:git@github.com:ivy-supplements/web-tester.git</connection>
-    <developerConnection>scm:git:git@github.com:ivy-supplements/web-tester.git</developerConnection>
-    <url>git@github.com:ivy-supplements/web-tester.git</url>
+    <developerConnection>scm:git:git@github.com:https://github.com/axonivy/web-tester.git</developerConnection>
   </scm>
 
   <organization>
@@ -35,50 +33,21 @@
 
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-    <revision>0-SNAPSHOT</revision>
     <skip.gpg>true</skip.gpg>
   </properties>
 
-  <profiles>
-    <profile>
+  <distributionManagement>
+    <snapshotRepository>
       <id>sonatype.snapshots</id>
-      <distributionManagement>
-        <snapshotRepository>
-          <id>sonatype.snapshots</id>
-          <name>Maven Central Snapshots Repo</name>
-          <url>https://oss.sonatype.org/content/repositories/snapshots</url>
-        </snapshotRepository>
-      </distributionManagement>
-    </profile>
-    <profile>
-      <id>maven.central.release</id>
-      <properties>
-        <skip.gpg>false</skip.gpg>
-      </properties>
-      <distributionManagement>
-        <repository>
-          <id>sonatype.releases</id>
-          <name>Sonatype Releases Repo</name>
-          <url>https://oss.sonatype.org/content/repositories/releases/</url>
-        </repository>
-      </distributionManagement>
-      <build>
-        <plugins>
-          <plugin>
-            <groupId>org.sonatype.plugins</groupId>
-            <artifactId>nexus-staging-maven-plugin</artifactId>
-            <version>1.6.13</version>
-            <extensions>true</extensions>
-            <configuration>
-              <serverId>sonatype.releases</serverId>
-              <nexusUrl>https://oss.sonatype.org/</nexusUrl>
-              <autoReleaseAfterClose>true</autoReleaseAfterClose>
-            </configuration>
-          </plugin>
-        </plugins>
-      </build>
-    </profile>
-  </profiles>
+      <name>Maven Central Snapshots Repo</name>
+      <url>https://oss.sonatype.org/content/repositories/snapshots</url>
+    </snapshotRepository>
+    <repository>
+      <id>sonatype.releases</id>
+      <name>Sonatype Releases Repo</name>
+      <url>https://oss.sonatype.org/content/repositories/releases/</url>
+    </repository>
+  </distributionManagement>
 
   <build>
     <plugins>
@@ -107,6 +76,17 @@
             </goals>
           </execution>
         </executions>
+      </plugin>
+      <plugin>
+        <groupId>org.sonatype.plugins</groupId>
+        <artifactId>nexus-staging-maven-plugin</artifactId>
+        <version>1.6.13</version>
+        <extensions>true</extensions>
+        <configuration>
+          <serverId>sonatype.releases</serverId>
+          <nexusUrl>https://oss.sonatype.org/</nexusUrl>
+          <autoReleaseAfterClose>true</autoReleaseAfterClose>
+        </configuration>
       </plugin>
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
@@ -145,6 +125,14 @@
             </configuration>
           </execution>
         </executions>
+      </plugin>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-deploy-plugin</artifactId>
+        <version>3.0.0</version>
+        <configuration>
+          <skip>true</skip>
+        </configuration>
       </plugin>
       <plugin>
         <groupId>org.codehaus.mojo</groupId>
