--- a/pom.xml
+++ b/pom.xml
@@ -1,11 +1,19 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
-  <groupId>com.axonivy.ivy.webtest</groupId>
+
+  <parent>
+    <groupId>com.axonivy.ivy.webtest</groupId>
+    <artifactId>web-config</artifactId>
+    <version>9.4.2-SNAPSHOT</version>
+    <relativePath>maven-config</relativePath>
+  </parent>
+
   <artifactId>web-module</artifactId>
-  <version>1.0.0-SNAPSHOT</version>
+  <version>9.4.2-SNAPSHOT</version>
   <packaging>pom</packaging>
 
   <modules>
+    <module>maven-config</module>
     <module>primeui-tester</module>
     <module>web-tester</module>
     <module>web-tester-product</module>
