--- a/unit-tester/pom.xml
+++ b/unit-tester/pom.xml
@@ -5,13 +5,13 @@
   <parent>
     <groupId>com.axonivy.ivy.webtest</groupId>
     <artifactId>web-config</artifactId>
-    <version>1.0.0-SNAPSHOT</version>
+    <version>9.4.2-SNAPSHOT</version>
     <relativePath>../maven-config</relativePath>
   </parent>
 
   <groupId>com.axonivy.ivy.test</groupId>
   <artifactId>unit-tester</artifactId>
-  <version>9.4.${revision}</version>
+  <version>9.4.2-SNAPSHOT</version>
   <packaging>jar</packaging>
 
   <name>unit-tester</name>
@@ -30,4 +30,17 @@
       <version>3.23.1</version>
     </dependency>
   </dependencies>
+
+  <build>
+    <plugins>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-deploy-plugin</artifactId>
+        <version>3.0.0</version>
+        <configuration>
+          <skip>false</skip>
+        </configuration>
+      </plugin>
+    </plugins>
+  </build>
 </project>
