--- a/web-tester-product/pom.xml
+++ b/web-tester-product/pom.xml
@@ -4,13 +4,13 @@
   <parent>
     <groupId>com.axonivy.ivy.webtest</groupId>
     <artifactId>web-config</artifactId>
-    <version>1.0.0-SNAPSHOT</version>
+    <version>9.4.2-SNAPSHOT</version>
     <relativePath>../maven-config</relativePath>
   </parent>
 
   <groupId>com.axonivy.ivy.webtest</groupId>
   <artifactId>web-tester-product</artifactId>
-  <version>9.4.${revision}</version>
+  <version>9.4.2-SNAPSHOT</version>
   <packaging>pom</packaging>
 
   <build>
@@ -34,15 +34,14 @@
           </execution>
         </executions>
       </plugin>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-deploy-plugin</artifactId>
+        <version>3.0.0</version>
+        <configuration>
+          <skip>false</skip>
+        </configuration>
+      </plugin>
     </plugins>
-    <pluginManagement>
-      <plugins>
-        <plugin>
-          <groupId>org.apache.maven.plugins</groupId>
-          <artifactId>maven-deploy-plugin</artifactId>
-          <version>3.0.0</version>
-        </plugin>        
-      </plugins>
-    </pluginManagement>
   </build>
 </project>
