--- a/web-tester/pom.xml
+++ b/web-tester/pom.xml
@@ -5,12 +5,12 @@
   <parent>
     <groupId>com.axonivy.ivy.webtest</groupId>
     <artifactId>web-config</artifactId>
-    <version>1.0.0-SNAPSHOT</version>
+    <version>9.4.2-SNAPSHOT</version>
     <relativePath>../maven-config</relativePath>
   </parent>
 
   <artifactId>web-tester</artifactId>
-  <version>9.4.${revision}</version>
+  <version>9.4.2-SNAPSHOT</version>
   <packaging>jar</packaging>
   
   <name>web-tester</name>
@@ -24,4 +24,17 @@
       <version>${project.version}</version>
     </dependency>
   </dependencies>
+
+  <build>
+    <plugins>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-deploy-plugin</artifactId>
+        <version>3.0.0</version>
+        <configuration>
+          <skip>false</skip>
+        </configuration>
+      </plugin>
+    </plugins>
+  </build>
 </project>
