--- a/maven-config/pom.xml
+++ b/maven-config/pom.xml
@@ -23,7 +23,9 @@
   </developers>
 
   <scm>
-    <developerConnection>scm:git:git@github.com:https://github.com/axonivy/web-tester.git</developerConnection>
+    <connection>scm:git:git@github.com:axonivy/web-tester.git</connection>
+    <developerConnection>scm:git:git@github.com:axonivy/web-tester.git</developerConnection>
+    <url>git@github.com:axonivy/web-tester.git</url>
   </scm>
 
   <organization>
