Add name, description and url to parent pom for release plugin

--- a/maven-config/pom.xml
+++ b/maven-config/pom.xml
@@ -23,8 +23,14 @@
   </developers>
 
   <scm>
-    <developerConnection>scm:git:git@github.com:https://github.com/axonivy/web-tester.git</developerConnection>
+    <connection>scm:git:git@github.com:axonivy/web-tester.git</connection>
+    <developerConnection>scm:git:git@github.com:axonivy/web-tester.git</developerConnection>
+    <url>git@github.com:axonivy/web-tester.git</url>
   </scm>
+
+  <name>web-config</name>
+  <description>Parent POM for all web-tester artifacts</description>
+  <url>https://github.com/axonivy/web-tester</url>
 
   <organization>
     <name>The open source community of Axon Ivy</name>
