Add WebAppFixture for IvyWebTest

--- a/pom.xml
+++ b/pom.xml
@@ -17,6 +17,7 @@
     <module>primeui-tester</module>
     <module>web-tester</module>
     <module>web-tester-product</module>
+    <module>web-tester-fixture</module>
     <module>unit-tester</module>
   </modules>
 
