--- a/web-tester-fixture/pom.xml
+++ b/web-tester-fixture/pom.xml
@@ -14,7 +14,7 @@
     <dependency>
       <groupId>com.axonivy.ivy.webtest</groupId>
       <artifactId>web-tester</artifactId>
-      <version>10.0.14-SNAPSHOT</version>
+      <version>${project.version}</version>
     </dependency>
   </dependencies>
   <build>
