--- a/web-tester-product/pom.xml
+++ b/web-tester-product/pom.xml
@@ -4,13 +4,13 @@
   <parent>
     <groupId>com.axonivy.ivy.webtest</groupId>
     <artifactId>web-config</artifactId>
-    <version>10.0.14</version>
+    <version>10.0.15-SNAPSHOT</version>
     <relativePath>../maven-config</relativePath>
   </parent>
 
   <groupId>com.axonivy.ivy.webtest</groupId>
   <artifactId>web-tester-product</artifactId>
-  <version>10.0.14</version>
+  <version>10.0.15-SNAPSHOT</version>
   <packaging>pom</packaging>
 
   <build>
