--- a/maven-config/pom.xml
+++ b/maven-config/pom.xml
@@ -2,7 +2,7 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>com.axonivy.ivy.webtest</groupId>
   <artifactId>web-config</artifactId>
-  <version>10.0.14-SNAPSHOT</version>
+  <version>10.0.14</version>
   <packaging>pom</packaging>
 
   <licenses>
@@ -25,7 +25,7 @@
     <connection>scm:git:git@github.com:axonivy/web-tester.git</connection>
     <developerConnection>scm:git:git@github.com:axonivy/web-tester.git</developerConnection>
     <url>git@github.com:axonivy/web-tester.git</url>
-    <tag>HEAD</tag>
+    <tag>v10.0.14</tag>
   </scm>
 
   <name>web-config</name>
