--- a/unit-tester/pom.xml
+++ b/unit-tester/pom.xml
@@ -4,13 +4,13 @@
   <parent>
     <groupId>com.axonivy.ivy.webtest</groupId>
     <artifactId>web-config</artifactId>
-    <version>10.0.14-SNAPSHOT</version>
+    <version>10.0.14</version>
     <relativePath>../maven-config</relativePath>
   </parent>
 
   <groupId>com.axonivy.ivy.test</groupId>
   <artifactId>unit-tester</artifactId>
-  <version>10.0.14-SNAPSHOT</version>
+  <version>10.0.14</version>
   <packaging>jar</packaging>
 
   <name>unit-tester</name>
