--- a/web-tester/pom.xml
+++ b/web-tester/pom.xml
@@ -23,6 +23,11 @@
       <artifactId>primeui-tester</artifactId>
       <version>${project.version}</version>
     </dependency>
+    <dependency>
+      <groupId>org.glassfish.jersey.core</groupId>
+      <artifactId>jersey-client</artifactId>
+      <version>2.41</version>
+    </dependency>
   </dependencies>
 
   <build>
